# ByeByeDPI

.github/workflows/: L.yml  android.yml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  conev.c
